--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="start_button">Start!</string>
     <string name="pause_button">Pause!</string>
     <string name="stop_button">Reset</string>
+    <string name="enable_GPS">Please enable GPS</string>
+    <string name="mile_button">Mile</string>
 
 </resources>
