[Implement] GPS function  On branch master 	modified:   bin/Timer.apk 	modified:   bin/classes.dex 	modified:   res/layout/activity_main.xml 	modified:   res/values/strings.xml 	modified:   src/com/runner/function/GPSfunction.java 	modified:   src/com/runner/timer/MainActivity.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="stop_button">Reset</string>
     <string name="enable_GPS">Please enable GPS</string>
     <string name="mile_button">Mile</string>
+    <string name="off_button">off</string>
 
 </resources>
